#Rnj 104 edit enjson

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,7 +5,7 @@
     "CONTACT": "Contact",
     "INTRO": "Hello, I'm Ranjeet Singh",
     "ENGLISH": "English",
-    "GERMAN": "Deutsch",
+    "GERMAN": "German",
     "DESCRIPTION": "I'm a passionate software engineer specializing in building web applications with Angular, JavaScript, and more." 
  },
  "ABOUTPAGE": {
