--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
     "INTRO": "Hello, I'm Ranjeet Singh",
     "ENGLISH": "English",
     "GERMAN": "German",
-    "DESCRIPTION": "I'm a passionate software engineer specializing in building web applications with Angular, JavaScript, and more." 
+    "DESCRIPTION": "I am passionate MEAN/MERN Stack developer with more than 8 years of experience in web development industry" 
  },
  "ABOUTPAGE": {
     "ABOUT_ME": "About Me",
