--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
       "HOME": "Startseite",
       "ABOUT": "Über mich",
       "CONTACT": "Kontakt",
-      "INTRO": "Hallo, ich bin Ranjeet Singh",
+      "INTRO": "Hallo, ich bin Ranjit Singh",
       "ENGLISH": "Englisch",
       "GERMAN": "Deutsch",
       "DESCRIPTION": "Ich bin ein leidenschaftlicher Softwareentwickler, der sich auf den Aufbau von Webanwendungen mit Angular, JavaScript und mehr spezialisiert hat."
