--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,7 +3,7 @@
     "HOME": "Home",
     "ABOUT": "About",
     "CONTACT": "Contact",
-    "INTRO": "Hello, I'm Ranjit Singh",
+    "INTRO": "Hello, I'm Ranjit Singh hello",
     "ENGLISH": "English",
     "GERMAN": "German",
     "DESCRIPTION": "I am passionate MEAN/MERN Stack developer with more than 8 years of experience in web development industry" 
