#Rnj #1d added work module

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -39,6 +39,8 @@
     "MESSAGE_NOT_SENT": "Message not sent"
  },
  "WORKPAGE":{
-      "HEADING": "Module under development !!"
+      "HEADING": "Featured Projects",
+      "SUB_HEADING": "Here are just a few of our recent projects.",
+      "BTN_TXT": "Visit Project"
    }
 }
