--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,44 +1,47 @@
 {
   "HOMEPAGE": {
-    "HOME": "Startseite",
-    "ABOUT": "Über mich",
-    "CONTACT": "Kontakt",
-    "WORK": "Arbeiten",
-    "INTRO": "Hallo, ich bin Ranjit Singh",
-    "ENGLISH": "Englisch",
-    "GERMAN": "Deutsch",
-    "DESCRIPTION": "Ich bin ein leidenschaftlicher MEAN/MERN Stack-Entwickler mit mehr als 8 Jahren Erfahrung in der Webentwicklung."
+     "HOME": "Startseite",
+     "ABOUT": "Über mich",
+     "CONTACT": "Kontakt",
+     "WORK": "Arbeit",
+     "INTRO": "Hallo, ich bin Ranjit Singh",
+     "ENGLISH": "Englisch",
+     "GERMAN": "Deutsch",
+     "DESCRIPTION": "Ich bin ein leidenschaftlicher MEAN/MERN Stack-Entwickler mit mehr als 8 Jahren Erfahrung in der Webentwicklungsbranche"
   },
   "ABOUTPAGE": {
-    "ABOUT_ME": "Über mich",
-    "DESCRIPTION": "Ich bin ein leidenschaftlicher Softwareentwickler mit Erfahrung im Aufbau moderner Webanwendungen. Ich löse gerne komplexe Probleme und entwickle Lösungen, die einen Unterschied machen. Hier sind einige weitere Informationen über mich.",
-    "SKILL_N_TECH": "Fähigkeiten & Technologien",
-    "EXPERIENCE": "Erfahrung",
-    "DESC_INTRO": "Ich habe an verschiedenen Projekten gearbeitet, von Webanwendungen bis hin zu Backend-Systemen, unter Verwendung von Tools wie Angular und Node.js.",
-    "WANNA_MORE": "Möchtest du mehr wissen?",
-    "CONTACT_ME": "Kontaktiere mich"
+     "ABOUT_ME": "Über mich",
+     "DESCRIPTION": "Ich bin ein leidenschaftlicher Softwareingenieur mit Erfahrung im Aufbau moderner Webanwendungen. Ich genieße es, komplexe Probleme zu lösen und Lösungen zu entwickeln, die einen Unterschied machen. Hier sind einige weitere Informationen über mich.",
+     "SKILL_N_TECH": "Fähigkeiten & Technologien",
+     "EXPERIENCE": "Erfahrung",
+     "DESC_INTRO": "Ich habe an verschiedenen Projekten gearbeitet, die von Webanwendungen bis hin zu Backend-Systemen reichen, unter Verwendung von Tools wie Angular, Node.js.",
+     "WANNA_MORE": "Möchten Sie mehr erfahren?",
+     "CONTACT_ME": "Kontaktieren Sie mich"
   },
   "CONTACTPAGE": {
-    "CONTACT_ME": "Kontaktiere mich",
-    "INTRO": "Zögere nicht, mich über das unten stehende Formular zu erreichen. Ich werde mich so schnell wie möglich bei dir melden.",
-    "NAME": "Dein Name",
-    "NAME_PLACEHOLDER": "Gib deinen Namen ein",
-    "EMAILL": "Deine E-Mail",
-    "EMAIL_PLACEHOLDER": "Gib deine E-Mail-Adresse ein",
-    "MESSAGE": "Deine Nachricht",
-    "MESSAGE_SENT": "Nachricht erfolgreich gesendet",
-    "SUCCESS": "Erfolg",
-    "CLOSE": "Schließen",
-    "MESSAGE_PLACEHOLDER": "Gib deine Nachricht ein",
-    "SEND_MSG": "Nachricht senden",
-    "REQUIRED": "ist erforderlich.",
-    "EMAIL_ERR": "Bitte gib eine gültige E-Mail-Adresse ein.",
-    "TEXTBOX": "muss mindestens 10 Zeichen lang sein.",
-    "TEXTBOX_SECOND": "darf 100 Zeichen nicht überschreiten.",
-    "ERRORD": "Fehler",
-    "MESSAGE_NOT_SENT": "Nachricht konnte nicht gesendet werden"
+     "CONTACT_ME": "Kontaktieren Sie mich",
+     "INTRO": "Zögern Sie nicht, mich über das untenstehende Formular zu kontaktieren. Ich werde mich so schnell wie möglich bei Ihnen melden.",
+     "NAME": "Ihr Name",
+     "NAME_PLACEHOLDER": "Geben Sie Ihren Namen ein",
+     "EMAILL": "Ihre E-Mail",
+     "EMAIL_PLACEHOLDER": "Geben Sie Ihre E-Mail ein",
+     "MESSAGE": "Ihre Nachricht",
+     "MESSAGE_SENT": "Nachricht erfolgreich gesendet",
+     "SUCCESS": "Erfolg",
+     "CLOSE": "Schließen",
+     "MESSAGE_PLACEHOLDER": "Geben Sie Ihre Nachricht ein",
+     "SEND_MSG": "Nachricht senden",
+     "REQUIRED": "ist erforderlich.",
+     "EMAIL_ERR": "Bitte geben Sie eine gültige E-Mail-Adresse ein.",
+     "TEXTBOX": "muss mindestens 10 Zeichen lang sein.",
+     "TEXTBOX_SECOND": "darf 100 Zeichen nicht überschreiten.",
+     "ERRORD": "Fehler",
+     "MESSAGE_NOT_SENT": "Nachricht nicht gesendet"
   },
   "WORKPAGE": {
-    "HEADING": "Modul in Entwicklung!!"
-  }
-}
+       "HEADING": "Ausgewählte Projekte",
+       "SUB_HEADING": "Hier sind nur einige unserer neuesten Projekte.",
+       "BTN_TXT": "Projekt besuchen"
+    }
+ }
+ 
