#Rnj added blog

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,8 @@
     "INTRO": "Hello, I'm Ranjit Singh",
     "ENGLISH": "English",
     "GERMAN": "German",
+    "BLOGS": "Blogs",
+    "MY_BLOG": "My Blog",
     "DESCRIPTION": "I am passionate MEAN/MERN Stack developer with more than 8 years of experience in web development industry" 
  },
  "ABOUTPAGE": {
