--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,8 @@
     "GERMAN": "German",
     "BLOGS": "Blogs",
     "MY_BLOG": "My Blog",
+    "FAQS": "Faq",
+    "BLOG_T": "Faqs",
     "DESCRIPTION": "I am passionate MEAN/MERN Stack developer with more than 8 years of experience in web development industry" 
  },
  "ABOUTPAGE": {
