--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,51 +1,63 @@
 {
-   "HOMEPAGE": {
-     "HOME": "Startseite",
-     "ABOUT": "Über mich",
-     "CONTACT": "Kontakt",
-     "WORK": "Arbeit",
-     "INTRO": "Hallo, ich bin Ranjit Singh",
-     "ENGLISH": "Englisch",
-     "GERMAN": "Deutsch",
-     "BLOGS": "Blogs",
-     "MY_BLOG": "Mein Blog",
-     "FAQS": "Häufig gestellte Fragen",
-     "BLOG_T": "Häufig gestellte Fragen",
-     "DESCRIPTION": "Ich bin ein leidenschaftlicher MEAN/MERN Stack Entwickler mit mehr als 8 Jahren Erfahrung in der Webentwicklungsbranche"
-   },
-   "ABOUTPAGE": {
-     "ABOUT_ME": "Über mich",
-     "DESCRIPTION": "Ich bin ein leidenschaftlicher Softwareentwickler mit Erfahrung in der Erstellung moderner Webanwendungen. Es macht mir Spaß, komplexe Probleme zu lösen und Lösungen zu entwickeln, die einen Unterschied machen. Hier ist noch mehr Information über mich.",
-     "SKILL_N_TECH": "Fähigkeiten & Technologien",
-     "EXPERIENCE": "Erfahrung",
-     "DESC_INTRO": "Ich habe an verschiedenen Projekten gearbeitet, von Webanwendungen bis hin zu Backend-Systemen, wobei ich Tools wie Angular und Node.js verwendet habe.",
-     "WANNA_MORE": "Möchten Sie mehr erfahren?",
-     "CONTACT_ME": "Kontaktieren Sie mich"
-   },
-   "CONTACTPAGE": {
-     "CONTACT_ME": "Kontaktieren Sie mich",
-     "INTRO": "Zögern Sie nicht, mich über das untenstehende Formular zu kontaktieren. Ich werde so schnell wie möglich antworten.",
-     "NAME": "Ihr Name",
-     "NAME_PLACEHOLDER": "Geben Sie Ihren Namen ein",
-     "EMAILL": "Ihre E-Mail",
-     "EMAIL_PLACEHOLDER": "Geben Sie Ihre E-Mail ein",
-     "MESSAGE": "Ihre Nachricht",
-     "MESSAGE_SENT": "Nachricht erfolgreich gesendet",
-     "SUCCESS": "Erfolg",
-     "CLOSE": "Schließen",
-     "MESSAGE_PLACEHOLDER": "Geben Sie Ihre Nachricht ein",
-     "SEND_MSG": "Nachricht senden",
-     "REQUIRED": "wird benötigt.",
-     "EMAIL_ERR": "Bitte geben Sie eine gültige E-Mail-Adresse ein.",
-     "TEXTBOX": "muss mindestens 10 Zeichen lang sein.",
-     "TEXTBOX_SECOND": "darf 100 Zeichen nicht überschreiten.",
-     "ERRORD": "Fehler",
-     "MESSAGE_NOT_SENT": "Nachricht nicht gesendet"
-   },
-   "WORKPAGE": {
-     "HEADING": "Hervorgehobene Projekte",
-     "SUB_HEADING": "Hier sind nur einige unserer jüngsten Projekte.",
-     "BTN_TXT": "Projekt besuchen"
-   }
- }
- 
+  "HOMEPAGE": {
+    "HOME": "Startseite",
+    "ABOUT": "Über mich",
+    "CONTACT": "Kontakt",
+    "WORK": "Arbeiten",
+    "INTRO": "Hallo, ich bin Ranjit Singh",
+    "ENGLISH": "Englisch",
+    "GERMAN": "Deutsch",
+    "BLOGS": "Blogs",
+    "MY_BLOG": "Mein Blog",
+    "FAQS": "Häufig gestellte Fragen",
+    "BLOG_T": "FAQ",
+    "SERVICES": "Dienstleistungen",
+    "DESCRIPTION": "Ich bin ein leidenschaftlicher MEAN/MERN Stack-Entwickler mit mehr als 8 Jahren Erfahrung in der Webentwicklung."
+  },
+  "ABOUTPAGE": {
+    "ABOUT_ME": "Über mich",
+    "DESCRIPTION": "Ich bin ein leidenschaftlicher Softwareingenieur mit Erfahrung in der Entwicklung moderner Webanwendungen. Ich löse gerne komplexe Probleme und baue Lösungen, die einen Unterschied machen. Hier sind einige weitere Informationen über mich.",
+    "SKILL_N_TECH": "Fähigkeiten & Technologien",
+    "EXPERIENCE": "Erfahrung",
+    "DESC_INTRO": "Ich habe an verschiedenen Projekten gearbeitet, von Webanwendungen bis hin zu Backend-Systemen, wobei ich Tools wie Angular und Node.js eingesetzt habe.",
+    "WANNA_MORE": "Möchten Sie mehr erfahren?",
+    "CONTACT_ME": "KONTAKTIEREN SIE MICH"
+  },
+  "CONTACTPAGE": {
+    "CONTACT_ME": "Kontaktieren Sie mich",
+    "INTRO": "Zögern Sie nicht, mich über das untenstehende Formular zu erreichen. Ich werde mich so schnell wie möglich bei Ihnen melden.",
+    "NAME": "Ihr Name",
+    "NAME_PLACEHOLDER": "Geben Sie Ihren Namen ein",
+    "EMAILL": "Ihre E-Mail",
+    "EMAIL_PLACEHOLDER": "Geben Sie Ihre E-Mail ein",
+    "MESSAGE": "Ihre Nachricht",
+    "MESSAGE_SENT": "Nachricht erfolgreich gesendet",
+    "SUCCESS": "Erfolg",
+    "CLOSE": "Schließen",
+    "MESSAGE_PLACEHOLDER": "Geben Sie Ihre Nachricht ein",
+    "SEND_MSG": "Nachricht senden",
+    "REQUIRED": "wird benötigt.",
+    "EMAIL_ERR": "Bitte geben Sie eine gültige E-Mail-Adresse ein.",
+    "TEXTBOX": "muss mindestens 10 Zeichen lang sein.",
+    "TEXTBOX_SECOND": "darf 100 Zeichen nicht überschreiten.",
+    "ERRORD": "Fehler",
+    "MESSAGE_NOT_SENT": "Nachricht nicht gesendet"
+  },
+  "WORKPAGE": {
+    "HEADING": "Hervorgehobene Projekte",
+    "SUB_HEADING": "Hier sind einige unserer neuesten Projekte.",
+    "BTN_TXT": "Projekt besuchen"
+  },
+  "SERVICES": {
+    "HEADING": "Webentwicklung",
+    "SUB_HEADING": "Mit einem kundenorientierten Ansatz und einer Leidenschaft für Innovation sorgt unser Expertenteam dafür, dass Ihre Web-App perfekt mit Ihrer Vision übereinstimmt. Wir nehmen uns die Zeit, Ihre einzigartigen Geschäftsanforderungen zu verstehen, damit wir maßgeschneiderte Lösungen entwickeln, die Ihre Online-Präsenz steigern und den Erfolg vorantreiben.",
+    "FRONT_END": "Front-End Webentwicklung",
+    "FRONT_END_SUBHEADING": "Erleben Sie die Kraft moderner Front-End-Technologien wie Angular und React.js, während wir beeindruckende Webanwendungen mit wiederverwendbaren Komponenten und komponentengetriebenen Architekturen erstellen. Unser Webanwendungs-Entwicklungsunternehmen kombiniert nahtlos fesselnde UI-Designs mit den Funktionen, die Sie benötigen.",
+    "BACK_END": "Back-End Webentwicklung",
+    "BACK_END_SUBHEADING": "Starke Grundlagen sind entscheidend für Webanwendungen. Unsere Experten im Bereich Backend-Entwicklung sorgen für robuste und skalierbare serverseitige Lösungen. Vom Datenbankdesign bis hin zur API-Integration garantieren wir nahtlose Funktionalität und außergewöhnliche Leistung für Ihre Web- und Mobilanwendungen.",
+    "PORTAL": "Website- und Portalentwicklung",
+    "PORTAL_SUBHEADING": "Machen Sie ein Statement mit Ihrer Online-Präsenz durch ansprechende Web-Erlebnisse. Unsere Website- und Portal-Entwicklungsdienste schaffen visuell beeindruckende und benutzerfreundliche Plattformen. Mit responsiven Designs und intuitiver Navigation passen wir jeden Aspekt perfekt an Ihre Marke und Ihre Geschäftsziele an.",
+    "API_DEV": "API-Entwicklung",
+    "API_SUBHEADING": "Nutzen Sie das volle Potenzial Ihrer Systeme mit unserer Expertise in der API-Entwicklung. Unsere robusten und sicheren APIs ermöglichen nahtlosen Datenaustausch und verbessern die Interoperabilität zwischen Ihren Anwendungen und Plattformen, wodurch Ihr Unternehmen mit optimierten Arbeitsabläufen gestärkt wird."
+  }
+}
