--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -9,6 +9,7 @@
     "GERMAN": "Deutsch",
     "BLOGS": "Blogs",
     "MY_BLOG": "Mein Blog",
+    "RELATIVE_BLOG": "Relativer Blog",
     "FAQS": "Häufig gestellte Fragen",
     "BLOG_T": "FAQ",
     "SERVICES": "Dienstleistungen",
