--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,6 +9,7 @@
     "GERMAN": "German",
     "BLOGS": "Blogs",
     "MY_BLOG": "My Blog",
+    "RELATIVE_BLOG": "Relative Blog",
     "FAQS": "Faq",
     "BLOG_T": "Faqs",
     "SERVICES": "Services",
